[package]
name = "stack2ssa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
target-lexicon = "0.12"
cranelift = "0.81"
cranelift-jit = "0.81"
cranelift-module = "0.81"
cranelift-preopt = "0.81"
capstone = "0.10"
